[refs #74887] Fix broken css.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
@@ -6723,6 +6723,45 @@ article img {
     .carousel-caption h4 {
       font-size: 10px; } }
 
+
+/* ADDED FIXES. These are not generated by gulp + bootstrap-sass. */
+div.utils ul.list-inline.land-list-separated li {
+  /* TODO: Investigate why. Find better fix. */
+  line-height: 0px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+}
+
+footer .text .list-inline.land-list-separated li:last-child:after {
+  content: '' !important;
+  margin-left: 0px;
+}
+
+a:link, a:visited {
+  color: #A0B228;
+}
+
+a.btn:link, a.btn:visited {
+  color: #FFFFFF;
+}
+
+div.row {
+  float: none;
+  width: auto;
+}
+
+.land-jumbotron a {
+  color: inherit;
+}
+
+#edit-bar {
+  height: 29px;
+}
+
+#contentActionMenus {
+  height: 29px;
+  padding: 7px;
   margin-right: 10px;
 }
 
